# model-driven-development

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/mdd-cycle/: SKILL.md
.claude/skills/mdd-deploy/: SKILL.md
.claude/skills/mdd-generate/: SKILL.md
.claude/skills/mdd-kickoff/: SKILL.md
.claude/skills/mdd-map/: SKILL.md
.claude/skills/mdd-render/: SKILL.md
.claude/skills/mdd-review/: SKILL.md
.claude/skills/mdd-test/: SKILL.md
.claude/skills/mdd-validate/: SKILL.md
.codex/skills/mdd-cycle/: SKILL.md
.codex/skills/mdd-deploy/: SKILL.md
.codex/skills/mdd-generate/: SKILL.md
.codex/skills/mdd-implement/: SKILL.md
.codex/skills/mdd-kickoff/: SKILL.md
.codex/skills/mdd-map/: SKILL.md
.codex/skills/mdd-ralph/: SKILL.md
.codex/skills/mdd-render/: SKILL.md
.codex/skills/mdd-validate/: SKILL.md
.mdd/: approvals.yml  config.yml  trace.yml
.mdd/architecture/: components.yml  constraints.yml  decisions.yml
.mdd/constraints/: architecture.ocl  canvas-view.ocl  cycle-tracking.ocl  deploy-iac.ocl  font-database.ocl  init-scaffold.ocl  kickoff.ocl  render-engine.ocl  scoped-review.ocl  session-bootstrap.ocl  test-assertion.ocl  viewer-ocl.ocl  viewer-puml-source.ocl  whole-map.ocl
.mdd/cycles/0001/: manifest.yml
.mdd/cycles/0002/: manifest.yml
.mdd/cycles/0003/: manifest.yml
.mdd/cycles/0004/: manifest.yml
.mdd/cycles/0005/: manifest.yml
.mdd/cycles/0006/: manifest.yml
.mdd/cycles/0007/: manifest.yml
.mdd/cycles/0008/: manifest.yml
.mdd/cycles/0009/: manifest.yml
.mdd/cycles/0010/: manifest.yml
.mdd/cycles/0011/: manifest.yml
.mdd/cycles/0012/: manifest.yml
.mdd/cycles/0013/: manifest.yml
.mdd/cycles/0014/: manifest.yml
.mdd/cycles/0015/: manifest.yml
.mdd/cycles/0016/: manifest.yml
.mdd/cycles/0017/: manifest.yml
.mdd/cycles/0018/: manifest.yml
.mdd/cycles/0019/: manifest.yml
.mdd/cycles/0020/: manifest.yml
.mdd/cycles/0021/: manifest.yml
.mdd/cycles/0022/: manifest.yml
.mdd/cycles/0023/: manifest.yml
.mdd/cycles/0024/: manifest.yml
.mdd/cycles/0025/: manifest.yml
.mdd/cycles/0026/: manifest.yml
.mdd/cycles/0027/: manifest.yml
.mdd/cycles/0028/: manifest.yml
.mdd/cycles/0029/: manifest.yml
.mdd/cycles/0030/: manifest.yml
.mdd/docs/: architecture-tracking.md  brief.md  deploy-profile.md  mdd-workflow.md  security-profile.md  test-profile.md  uml-and-ocl-guide.md
.mdd/map/: manifest.yml
.mdd/map/components/: arch-diff.puml  architecture.puml
.mdd/map/domain/: arch-diff.puml  scoped-remap.puml  test-tdd.puml
.mdd/ralph/: PLAN.md  PROMPT.md
.mdd/tests/ui/: viewer-full.spec.ts
Formula/: mdd.rb
crates/mdd-agent/: Cargo.toml
crates/mdd-cli/: Cargo.toml
crates/mdd-cli/src/: main.rs
crates/mdd-cli/tests/: cli.rs
crates/mdd-core/: Cargo.toml
crates/mdd-core/src/: architecture.rs  cycle.rs  lib.rs  templates.rs  traceability.rs
crates/mdd-render/: Cargo.toml
crates/mdd-viewer/: Cargo.toml
crates/mdd-viewer/src/: graph.rs  lib.rs  theme.rs  tree.rs
docs/proposals/: cycle-history-via-git.md  deterministic-current-extraction.md  executable-constraints-and-sec.md  greenfield-kickoff.md  tdd-and-test-assertion.md
mockups/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
mockups/src/: main.tsx  styles.css
scripts/: build-release.sh
(+477 files in other folders)
