[workspace]
members = [
  "crates/mdd-agent",
  "crates/mdd-cli",
  "crates/mdd-core",
  "crates/mdd-render",
  "crates/mdd-viewer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "git@github.com:cthadeufaria/model-driven-development.git"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
insta = "1"
petgraph = "0.8"
predicates = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
walkdir = "2"
