[package]
name = "mdd-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
petgraph.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
