[package]
name = "mdd-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
walkdir.workspace = true
# Traceability engine (CMP-TRACE-ENGINE): syn parses Rust source into a
# symbol index; proc-macro2 span-locations yields line spans without a
# language server. Single-language (Rust) by design; swap for an LSP
# client only if the repo goes polyglot.
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile.workspace = true
