[package]
name = "mdd-viewer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
mdd-core = { path = "../mdd-core" }
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
